############################################################################
# Copyright (c) 2015 Saint Petersburg State University
# Copyright (c) 2011-2014 Saint Petersburg Academic University
# All Rights Reserved
# See file LICENSE for details.
############################################################################

add_subdirectory(spades)
add_subdirectory(hammer)
add_subdirectory(ionhammer)
add_subdirectory(corrector)
add_subdirectory(scaffold_correction)
add_subdirectory(kmercount)
add_subdirectory(gbuilder)
add_subdirectory(gmapper)
